# apex-lang

./: .gitignore  CMakeLists.txt  build.spec  changelog.md  code_of_conduct.md  contributing.md  license  main.c  main.py  readme.md  test.apex
.github/workflows/: release.yml
resources/: Apex_in_Three-Pages.md  Library_Reference.md  RM_fBeginners.md  RM_fDevelopers.md  roadmap.md
source/compiler/: generate_ir.c  generate_ir.h
source/core/: __init__.py  apex_limits.h  ast.c  ast.h  bytecode.c  bytecode.h  codegen.c  codegen.h  interpreter.py  interpreter_main.py  parser.c  parser.h  parser.py  parser_main.py  sema.c  sema.h  tokenizer.c  tokenizer.h  tokenizer.py  vm.c  vm.h
source/core/interpreter/: __init__.py  environment.py  evaluator.py  expressions.py  functions.py  helpers.py  literals.py  modules.py  statements.py  tables.py
source/core/parser/: __init__.py  ast.py  parser_expressions.py  parser_helpers.py  parser_imports.py  parser_statements.py  token.py  token_type.py
source/embedded/: settings.apex
source/libraries/: __init__.py  base_module.c  base_module.h  builtin_module.py  codecs_module.c  codecs_module.h  csv_module.c  csv_module.h  ffi_module.c  ffi_module.h  files_module.c  files_module.h  json_module.c  json_module.h  math_module.c  math_module.h  math_module.py  network_module.py  os_module.c  os_module.h  os_module.py  random_module.c  random_module.h  regex_module.c  regex_module.h  secrets_module.c  secrets_module.h  string_module.c  string_module.h  string_module.py  sys_module.c  sys_module.h  table_module.c  table_module.h  table_module.py  ui_module.py
source/package_manager/: http_client.h  install.c  package_manager.h  publish.c  zip_utils.h
source/package_manager/server/: db.js  package-lock.json  package.json  server.js
source/package_manager/server/public/: index.html
source/tests/: arithmetic.apex  calc_easy.apex  for.apex  for_in.apex  for_to.apex  function.apex  if.apex  imports.apex  math_interpolation.apex  math_lib.apex  nine.apex  parameter_typing.apex  run_all_benchmarks.apex  run_all_tests.apex  run_all_tests.sh  string.apex  string_interpolation.apex  table.apex  try.apex  type_conversion.apex  variables.apex  while.apex
source/tests/arithmetic/: decimal_with_decimal.apex  priority_parentheses.apex  priority_without_parentheses.apex  whole_with_decimal.apex  whole_with_whole.apex
source/tests/arithmetic/decimal_with_decimal/: decimal_with_decimal_add.apex  decimal_with_decimal_divide.apex  decimal_with_decimal_modulo.apex  decimal_with_decimal_multiply.apex  decimal_with_decimal_subtract.apex
source/tests/arithmetic/priority/: priority_mixed_without_parentheses.apex  priority_multiple_levels.apex  priority_parentheses.apex  priority_same_precedence_left_to_right.apex
source/tests/arithmetic/whole_with_decimal/: whole_with_decimal_add.apex  whole_with_decimal_divide.apex  whole_with_decimal_modulo.apex  whole_with_decimal_multiply.apex  whole_with_decimal_subtract.apex
source/tests/arithmetic/whole_with_whole/: whole_with_whole_add.apex  whole_with_whole_divide.apex  whole_with_whole_modulo.apex  whole_with_whole_multiply.apex  whole_with_whole_subtract.apex
source/tests/benchmark/: ackermann.apex  fib(35).apex  fib_recursive.apex  for_1000000.apex  for_condition.apex  for_counter.apex  for_iterations.apex  hashtable_large.apex  matrix_multiplication.apex  nested_3d_loops.apex  string_building.apex  string_key_operations.apex  table_copy.apex  table_merge.apex  table_nested_access.apex  temp_tables.apex  tree.apex  while_1000000.apex  while_iterations.apex
source/tests/benchmark/ackermann/: ackermann_310.apex  ackermann_312.apex  ackermann_314.apex  ackermann_36.apex  ackermann_38.apex  ackermann_41.apex
source/tests/benchmark/fib_iterative/: fib_50.apex  fib_iter.apex
source/tests/benchmark/fib_recursive/: fib_30.apex  fib_35.apex  fib_40.apex  fib_45.apex
source/tests/benchmark/for_iterations/: for_100m.apex  for_10m.apex  for_1b.apex  for_1m.apex
source/tests/benchmark/tree/: tree_20.apex  tree_25.apex  tree_30.apex  tree_35.apex
source/tests/errors/: access_non_table.apex  assign_error_in_failure.apex  break_outside_loop.apex  builtin_module_not_imported.apex  cannot_access_member.apex  cannot_access_member_non-table.apex  cannot_assign_not_variable.apex  cannot_assign_to_literal.apex  cannot_call_non-function.apex  cannot_call_non_function.apex  cannot_change_type_variable.apex  cannot_compare_types.apex  cannot_iterate.apex  cannot_set_property.apex  continue_outside_loop.apex  division_by_zero.apex  division_by_zero_runtime.apex  duplicate_function.apex  duplicate_param.apex  expected_assignment_after_for.apex  expected_function_name.apex  expected_identifier_after_dot.apex  expected_indentation.apex  expected_module_name.apex  expected_parameter_name.apex  expected_rparen_after_args.apex  expected_rparen_after_expression.apex  expected_variable_name.apex  expression_not_used.apex  for.apex  function.apex  function_already_declared.apex  function_expects_arguments.apex  function_not_defined.apex  if.apex  if_condition_must_boolean.apex  if_condition_not_boolean.apex  incompatible_types.apex  interpolation.apex  interpolation_keywords.apex  (+22 more)
source/tests/integration/: function.apex  import.apex  lib.apex  table.apex
source/tests/libraries/: codecs.apex  ffi.apex  math.apex  network.apex  os.apex  random.apex  string.apex  sys.apex  table.apex
source/tests/loops/: for.apex  for_condition.apex  for_counter.apex  for_infinity.apex  for_nested.apex  for_table.apex  nested_loops.apex  while.apex
source/tests/type_conversion/: number.apex  string.apex
source/utils/: add_to_path.c  add_to_path.h  add_to_path.py  apex_api.c  apex_api.h  bridge.c  bridge.h  build.c  build.h  commands.c  commands.h  error.c  error.h  execute.c  execute.h  execute.py  highlight.c  highlight.h  platform.c  platform.h  repl.c  repl.h  repl.py  vfs_packer.c
source/vscode/: extension.js  language-configuration.json  package.json  readme.md  snippets.json
source/vscode/syntaxes/: apex.tmLanguage.json
(+260 files in other folders)
